Recomendations is done

--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -9,19 +9,30 @@
 Для внедрения разрабатываемого продукта необходим перечень документов.
 Данные документы необходимы для разработки, внедрения и сопровождения разрабатываемого продукта.
 В данной курсовой работе разрабатывается перечень документов для охранной системы, а именно:
-\begin{enumerate}
-\changefontsizes[14pt]{14pt}
-	\item Техническое задание;
-	\item Техническое предложение;
-	\item Технический проект;
-	\item Схема функциональная;
-	\item Схема структурная;
-	\item Схема принципиальная;
-	\item Чертёж основания;
-	\item Чертёж крышки корпуса;
-	\item Чертёж сборочный;
-	\item Рисунок печатной платы.
-\end{enumerate}
+
+\begin{tabular}{m{0.45\linewidth}m{0.45\linewidth}}
+	\begin{enumerate}
+		\changefontsizes[14pt]{14pt}
+		\setlength{\itemsep}{0pt}
+		\item Техническое задание;
+		\item Техническое предложение;
+		\item Технический проект;
+		\item Схема функциональная;
+		\item Схема структурная;
+	\end{enumerate}
+	&
+	\begin{enumerate}
+		\setcounter{enumi}{5}
+		\changefontsizes[14pt]{14pt}
+		\setlength{\itemsep}{0pt}
+		\item Схема принципиальная;
+		\item Чертёж основания;
+		\item Чертёж крышки корпуса;
+		\item Чертёж сборочный;
+		\item Рисунок печатной платы.
+	\end{enumerate}
+\end{tabular}
+
 
 Общеизвестным фактом является то, что с автоматизированными системами рука об руку идёт и программное сопровождение.
 Следовательно, в стадии разработки нового продукта следует включить и этапы разработки программного обеспечения.
