--- a/src/project.tex
+++ b/src/project.tex
@@ -30,6 +30,8 @@
 				\caption{Диаграмма выбор способа охлаждения}\label{projectp1}
 			\end{figure}
 			\begin{enumerate}
+				\changefontsizes[14pt]{14pt}
+				\setlength{\itemsep}{0pt}
 				\item Естественное;
 				\item Естественное или принудительная конвекция;
 				\item Принудительная конвекция;
@@ -64,13 +66,22 @@
 			\input{src/tables/projectt1.tex}
 		\subsection{Программная часть}
 			\subsubsection{Описание}
-				Программа, ккоторая вшивается в микроконтроллер, работает по приципу автомата. То есть при послуплении новой информации вся хранимая информация сдвикается на определённый размер записи. В момент переполнения банка данных самая старая запись стирается и записывается новая в начало, а остальные записи так же сдвигаются на размер записей. 
+				Программа, которая вшивается в микроконтроллер, работает по прицепу автомата. То есть при поступлении новой информации вся хранимая информация сдвигается на определённый размер записи. В момент переполнения банка данных самая старая запись стирается и записывается новая в начало, а остальные записи так же сдвигаются на размер записей. 
 				
-				Запись имеет следующий формат: <<HH:MM dd.mm.yyyy>>. 
-				
-				При необходимости считывания записией, нужeн вызов специалиста, который средствами микроконтроллера извлечёт необходимую информацию.
+				\subsubsection{Характеристики программной части продукта}
+				Ниже представлен краткий список свойств и рекомендаций программной части продукта:
+			\begin{enumerate}
+				\changefontsizes[14pt]{14pt}
+				\setlength{\itemsep}{0pt}
+				\item Запись имеет следующий формат: <<HH:MM dd.mm.yyyy>>;
+				\item Для реализации программной части продукта необходим разработчик специализирующийся на микропрограммах;
+				\item Сам процесс прошивки микроконтроллера должен происходить по средствам ПЛИС;
+				\item Для считывания записей, нужен вызов специалиста, который средствами микроконтроллера извлечёт необходимую информацию;
+				\item В случае отказа микроконтроллера следует произвести мероприятия по его восстановлению, проверить целостность данных и устранить причину отказа.
+			\end{enumerate}
+
 			\subsubsection{Кодирование}
-				На рисунке \ref{projectp2} изабражен листинг проживки микроконтроллера.
+				На рисунке \ref{projectp2} изображен листинг прошивки микроконтроллера.
 				\begin{figure}[ht!]
 					\centering
 					\includegraphics[width=150mm]{src/pictures/program.png}
