--- a/src/tables/offert2.tex
+++ b/src/tables/offert2.tex
@@ -1,3 +1,5 @@
+{
+\changefontsizes[14pt]{14pt}
 \begin{longtable}[t]{@{\extracolsep{\fill}}|l|@{\hskip-14pt}p{0.3\textwidth}|@{\hskip-14pt}p{0.3\textwidth}|}
 	\caption{Сравнение видов датчиков} \label{offert2} \\ \hline
 	Вид & Преимущества & Недостатки \\ \hline
@@ -55,3 +57,4 @@
 		Может иметь несколько независимых зон обнаружения
 		\\ \hline
 \end{longtable}
+}
