--- a/src/tables/offert3.tex
+++ b/src/tables/offert3.tex
@@ -1,3 +1,5 @@
+{
+\changefontsizes[14pt]{14pt}
 \begin{longtable}[t]{@{\extracolsep{\fill}}|@{\hskip3pt}p{0.3\textwidth}|l|l|l|}
 	\caption{Сравнение видов датчиков} \label{offert3} \\ \hline
 	Датчик & Рапид-3 & Рапид-2 & Рапид-10 \\ \hline
@@ -26,3 +28,4 @@
 	Срок службы, не менее	&	10 лет	&	5 лет	&	10 лет	\\ \hline
 	Стоимость				&	434	&	1613	&	657	\\ \hline
 \end{longtable}
+}
