--- a/src/drawings.tex
+++ b/src/drawings.tex
@@ -1,12 +1,12 @@
-\chapter{Чертёж основания}
+\chap{Чертёж основания}
 	\begin{center}
 		\includegraphics[width=170mm]{src/pictures/drawingp1.png}
 	\end{center}
-\chapter{Чертёж крышки корпуса}
+\chap{Чертёж крышки корпуса}
 	\begin{center}
 		\includegraphics[width=130mm]{src/pictures/drawingp2.png}
 	\end{center}
-\chapter{Чертёж сборочный}
+\chap{Чертёж сборочный}
 	\begin{center}
 		\includegraphics[width=140mm]{src/pictures/drawingp3.png}
 	\end{center}
