--- a/src/offer.tex
+++ b/src/offer.tex
@@ -1,4 +1,4 @@
-\chapter{Техническое предложение}
+\chap{Техническое предложение}
 	\section{Сравнительный анализ вариантов реализации}
 		Прибор сравнивает значение с датчиков и заданное значение, результаты передаются на выходы управляющего устройства.
 
