--- a/src/picture.tex
+++ b/src/picture.tex
@@ -1,4 +1,4 @@
-\chapter{Рисунок печатной платы}
+\chap{Рисунок печатной платы}
 	\begin{center}
 		\includegraphics[width=170mm]{src/pictures/picturep1.png}
 	\end{center}
