--- a/src/task.tex
+++ b/src/task.tex
@@ -1,4 +1,4 @@
-\chapter{Техническое задание}
+\chap{Техническое задание}
 	\section{Обоснование для проведения работ}
 		Задание преподавателя.
 	\section{Исполнитель работ}
