--- a/src/project.tex
+++ b/src/project.tex
@@ -1,4 +1,4 @@
-\chapter{Технический проект}
+\chap{Технический проект}
 	\section{Техническое описание}
 		\subsection{Назначение}
 				Устройство предназначения для мониторинга и включения системы оповещения в случае
