--- a/src/schemes.tex
+++ b/src/schemes.tex
@@ -1,14 +1,14 @@
-\chapter{Схема функциональная}
+\chap{Схема функциональная}
 	\section{Схема электрическая функциональная}
 	\begin{center}
 		\includegraphics[width=170mm]{src/pictures/schemep1.png}
 	\end{center}
-\chapter{Схема структурная}
+\chap{Схема структурная}
 	\section{Схема электрическая структурная}
 	\begin{center}
 		\includegraphics[width=170mm]{src/pictures/schemep2.png}
 	\end{center}
-\chapter{Схема принципиальная}
+\chap{Схема принципиальная}
 	\section{Схема электрическая принципиальная}
 		\begin{center}
 			\includegraphics[width=155mm]{src/pictures/schemep3.png}
