--- a/doc.tex
+++ b/doc.tex
@@ -1,24 +1,21 @@
 \documentclass[numbers=noenddot,a4paper]{kurreport}
 %preamble
-\title{КР.430200.09.04.04.ПЗ}
-\providecommand\mytitle{КР. 430200. 09.04.04.ПЗ}
-\providecommand\kurtitle{Разработка документации для конструкторско-технологического продукта с программным обеспечением}
-% \bibliography{src}
+\title{МД.430200.09.04.04.001-2018.ПЗ}
+\providecommand\mytitle{МД.430200.09.04.04.001-2018.ПЗ}
+\providecommand\kurtitle{Логическое управление имитационным процессом
+		на основе системы автоматического доказательства теорем}
 
-\newcounter{countsec}
-\newcommand{\chap}[1]{\stepcounter{countsec}\stepcounter{chapter}\chapter*{\arabic{countsec} #1}
-		\addcontentsline{toc}{chapter}{\arabic{countsec} #1}}
 \begin{document}
 	\input{title.tex}
 	\input{src/introduction.tex}
 	\input{src/task.tex}
-	\input{src/offer.tex}
-	\input{src/project.tex}
-	\input{src/spec.tex}
-	\input{src/schemes.tex}
-	\input{src/drawings.tex}
-	\input{src/picture.tex}
-	\input{src/conclusion.tex}
+	% \input{src/offer.tex}
+	% \input{src/project.tex}
+	% \input{src/spec.tex}
+	% \input{src/schemes.tex}
+	% \input{src/drawings.tex}
+	% \input{src/picture.tex}
+	% \input{src/conclusion.tex}
 	\newpage
 	\bibliographystyle{/home/groot/latex/utf8gost705u}
 	\addcontentsline{toc}{chapter}{Список использованных источников}
