--- a/title.tex
+++ b/title.tex
@@ -1,4 +1,5 @@
 \begin{titlepage}
+	\changefontsizes[14pt]{14pt}
 	\newpage
 	\begin{center}
 		ФЕДЕРАЛЬНОЕ АГЕНСТВО ЖЕЛЕЗНОДОРОЖНОГО ТАРНСПОРТА \\
@@ -6,31 +7,47 @@
 		Федерально государственное бюджетное образовательное учреждение \\ высшего образования \\
 		<<Иркутский государственный университет путей и сообщения>> \\
 		(ФГБОУ ВО ИрГУПС) \\
-		\vspace{28pt}
+		\vspace{21pt}
 		Факультет <<Управление на транспорте и информационнные технологии>> \\
 		Кафедра <<Информационные системы и защита информации>>
 	\end{center}
 	\vspace{28pt}
+	\begin{flushleft}
+		\begin{tabular}{p{0.47\textwidth}l}
+								&  К ЗАЩИТЕ ДОПУСКАЮ				\\
+								&  	зав. кафедрой «ИСиЗИ»			\\
+								&  	д.т.н., доцент Аршинский Л.В.	\\
+		\end{tabular}
+	\end{flushleft}
+	\vspace{28pt}
 	\begin{center}
 		\MakeUppercase{\kurtitle}
 	\end{center}
-	\vspace{-14pt}
+	\vspace{-7pt}
 	\begin{center}
-		Курсовая работа \\
+		Магистерская диссертация \\
 	\vspace{14pt}
 		\mytitle
 	\end{center}
-	\vspace{56pt}
+	\vspace{49pt}
 	\begin{flushleft}
-		\begin{tabular}{p{0.57\textwidth}l}
-			Выполнил					&  Проверил 			\\
-			магистрант гр. ПИм.1-16-1	&  к. ф-м. н., доцент	\\
-			Арляпов С.В.				&  Шлаустас Р.Ю.		\\
+		\begin{tabular}{p{0.47\textwidth}l}
+			КОНСУЛЬТАНТ			&  РУКОВОДИТЕЛЬ ПРОЕКТА		\\
+			по нормоконтролю	&  ст. пр. Звонков И.В.		\\
+			??????????			&  							\\
+		\end{tabular}
+	\end{flushleft}
+	\vspace{49pt}
+	\begin{flushleft}
+		\begin{tabular}{p{0.47\textwidth}l}
+								&  ИСПОЛНИТЕЛЬ				\\
+								&  студент группы ПИм.1-16-1\\
+								&  Арляпов С.В.				\\
 		\end{tabular}
 	\end{flushleft}
 	\vspace{\fill}
 	\begin{center}
-		Иркутск \\ 2017
+		Иркутск 2018
 	\end{center}
 \afterpage{
 	\newgeometry{left=3cm,right=1cm,top=1.5cm,bottom=5cm,bindingoffset=0cm}
